# wikimark

./: .env.example.txt  .gitignore  database.py  docker-compose.yml  models.py  pyproject.toml  readme.md  requirements.md  schemas.py
app/: auth.py  database.py  main.py  models.py  schemas.py  users.py
app/alembic/: env.py
app/routers/: articles.py  websocket_routes.py  wiki.py  wiki_search.py
app/services/: async_wikipedia_client.py  content_tagging.py  wikipedia_client.py  wikipedia_rest_client.py
app/static/: app.js  bookmarks.html  bookmarks.js  index.html  style.css  ws-search.html
routers/: users.py  wiki.py
